# actix-auth

./: Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.release  TODO.md  docker-compose.yml
common/: Cargo.toml
common/src/: errors.rs
migrations/2020-04-07-022051_init/: down.sql  up.sql
src/: db.rs  main.rs  routes.rs  schema.rs
src/controllers/: key.rs  user.rs
src/models/: key.rs  user.rs
src/utils/: errors.rs  token.rs
users/: Cargo.toml  docker-compose.yml
users/src/: main.rs  routes.rs
users/src/controllers/: key.rs  user.rs
users/src/models/: key.rs  user.rs
users/src/utils/: token.rs
