[package]
name = "wager"
version = "0.1.0"
authors = ["adamaho <aaho.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-web-httpauth = "0.4"
bcrypt = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "^1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
env_logger = "0.7.1"
failure = "0.1"
failure_derive = "0.1"
log = "0.4.0"
jsonwebtoken = "7"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
validator = "0.10"
validator_derive = "0.10"