[package]
name = "common"
version = "0.1.0"
authors = ["adamaho <aaho.public@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
bcrypt = "0.7"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "^1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
failure = "0.1"
failure_derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.10"